    involving negative indexes,  e.g., x = [1];  y = x[[-2:]];
    Previousely this resulted in y = [1,1] instead of an error.
79. modules/csv.sl: Avoid indexing an empty array with a negative
    index (detected by change #78)
80. src/slarray:c: #78 was flagging x[[:-2]] as invalid instead of
    producing an empty array for x=[1]


{{{ Previous Versions

Changes since 2.3.1a
1. modules/stats_kendall.c: Updated to use Knight's O(NlogN)
   algorithm.  This update was facilitating by separating out some
   integer typedefs from _slang.h and placing them in _slint.h.  The
   closely relation mann_kendall function was also added to the stats
   module.
2. modules/stats_kendall.c: In the prtaus function, the loops were
   reorganized loops to eliminate embedded if-tests, and the code that
   deals with arrays were made for "C-like".
3. Merged Manfred Hanke's CSV module documentation updates.
4. slsh/lib/cmdopt.sl: The form -fVAL was not working as described for
   short-options whose value (VAL) is optional.
5. src/sl*.h: Updated Unicode tables from version 5 to 9
6. src/slischar.h: Previously, if a lower(upper) case character did
   not have a mapping to an upper(lower) case character, it was take
   to not have a case.  This restriction has been dropped.  In other
   words, it is nolonger necessary for an upper(lower) case character
   to have a lower(upper) case equivalent.
7. src/slpack.c: Added an intrinsic function (_array_byteswap) that
   may be used to convert the values of an array from one endianness
   to another.
8. src/slparse.c: It is now possible to use reserved words as struct
   field names without quoting them.  For example, it is now possible
   to write
              s = struct { public = value };
   Previously, this required the field name to be quoted:
              s = struct { "public" = value };

9. modules/json-module.c: Malformed UTF-8 was not being properly
   handled by the json-encoder.